// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render custom span renderer 1`] = `
Object {
  "children": Array [
    Object {
      "attrs": Object {
        "key": "t-0",
      },
      "children": Array [
        Array [
          Object {
            "attrs": Object {
              "key": "t-0",
            },
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "key": "t-0-line-first",
                    "text": "text",
                  },
                  Object {
                    "attrs": Object {
                      "key": "t-0-br-0",
                    },
                    "children": Array [],
                    "tagName": "br",
                  },
                  Object {
                    "key": "t-0-line-0",
                    "text": "two",
                  },
                ],
                "key": "t-0",
              },
            ],
            "tagName": "something-different",
          },
        ],
      ],
      "tagName": "p",
    },
  ],
  "key": "t-0",
}
`;

exports[`render transforms a structured text GraphQL response into HTML using an adapter 1`] = `
Object {
  "children": Array [
    Object {
      "attrs": Object {
        "key": "t-0",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "This is a ",
              },
            ],
            "key": "t-0",
          },
          Object {
            "attrs": Object {
              "key": "t-1",
            },
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "key": "t-1-line-first",
                    "text": "title",
                  },
                ],
                "key": "t-1",
              },
            ],
            "tagName": "mark",
          },
          Object {
            "children": Array [
              Object {
                "key": "t-2-line-first",
                "text": ".",
              },
            ],
            "key": "t-2",
          },
        ],
      ],
      "tagName": "h1",
    },
    Object {
      "attrs": Object {
        "key": "t-1",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "And it's berry perfect.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-2",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Seriously, what the grape else do you want?",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-3",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "You probably build websites and think your banana is special.",
              },
              Object {
                "attrs": Object {
                  "key": "t-0-br-0",
                },
                "children": Array [],
                "tagName": "br",
              },
              Object {
                "key": "t-0-line-0",
                "text": "You think your 13 megabyte parallax-ative home page is going to get you",
              },
            ],
            "key": "t-0",
          },
          Object {
            "attrs": Object {
              "key": "t-1",
            },
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "key": "t-1-line-first",
                    "text": " some fruity Awwward banner y",
                  },
                ],
                "key": "t-1",
              },
            ],
            "tagName": "strong",
          },
          Object {
            "children": Array [
              Object {
                "key": "t-2-line-first",
                "text": "ou can glue to the top corner of your site. You think your 40-pound jQuery file and 83 polyfills give IE7 a peach because it finally has box-shadow. Wrong, melonhead. Let me describe your perfect-pear website:",
              },
            ],
            "key": "t-2",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-4",
      },
      "children": Array [
        Array [
          Object {
            "attrs": Object {
              "key": "t-0",
            },
            "children": Array [
              Array [
                Object {
                  "attrs": Object {
                    "key": "t-0",
                  },
                  "children": Array [
                    Array [
                      Object {
                        "children": Array [
                          Object {
                            "key": "t-0-line-first",
                            "text": "Fruit's lightweight and loads fast",
                          },
                        ],
                        "key": "t-0",
                      },
                    ],
                  ],
                  "tagName": "p",
                },
                Object {
                  "attrs": Object {
                    "key": "t-1",
                  },
                  "children": Array [
                    Array [
                      Object {
                        "attrs": Object {
                          "key": "t-0",
                        },
                        "children": Array [
                          Array [
                            Object {
                              "attrs": Object {
                                "key": "t-0",
                              },
                              "children": Array [
                                Array [
                                  Object {
                                    "children": Array [
                                      Object {
                                        "key": "t-0-line-first",
                                        "text": "Looks the same in all your citrusy browsers",
                                      },
                                    ],
                                    "key": "t-0",
                                  },
                                ],
                              ],
                              "tagName": "p",
                            },
                          ],
                        ],
                        "tagName": "li",
                      },
                      Object {
                        "attrs": Object {
                          "key": "t-1",
                        },
                        "children": Array [
                          Array [
                            Object {
                              "attrs": Object {
                                "key": "t-0",
                              },
                              "children": Array [
                                Array [
                                  Object {
                                    "children": Array [
                                      Object {
                                        "key": "t-0-line-first",
                                        "text": "Fits on all your juicy screens",
                                      },
                                    ],
                                    "key": "t-0",
                                  },
                                ],
                              ],
                              "tagName": "p",
                            },
                            Object {
                              "attrs": Object {
                                "key": "t-1",
                              },
                              "children": Array [
                                Array [
                                  Object {
                                    "attrs": Object {
                                      "key": "t-0",
                                    },
                                    "children": Array [
                                      Array [
                                        Object {
                                          "attrs": Object {
                                            "key": "t-0",
                                          },
                                          "children": Array [
                                            Array [
                                              Object {
                                                "children": Array [
                                                  Object {
                                                    "key": "t-0-line-first",
                                                    "text": "The kumquat's accessible to every apricot that visits your site",
                                                  },
                                                ],
                                                "key": "t-0",
                                              },
                                            ],
                                          ],
                                          "tagName": "p",
                                        },
                                      ],
                                    ],
                                    "tagName": "li",
                                  },
                                ],
                              ],
                              "tagName": "ul",
                            },
                          ],
                        ],
                        "tagName": "li",
                      },
                    ],
                  ],
                  "tagName": "ul",
                },
              ],
            ],
            "tagName": "li",
          },
          Object {
            "attrs": Object {
              "key": "t-1",
            },
            "children": Array [
              Array [
                Object {
                  "attrs": Object {
                    "key": "t-0",
                  },
                  "children": Array [
                    Array [
                      Object {
                        "children": Array [
                          Object {
                            "key": "t-0-line-first",
                            "text": "Fruit's legible and gets your juicy point across (if you had one instead of just 5mb pics of hipsters drinking coffee)",
                          },
                        ],
                        "key": "t-0",
                      },
                    ],
                  ],
                  "tagName": "p",
                },
              ],
            ],
            "tagName": "li",
          },
        ],
      ],
      "tagName": "ul",
    },
    Object {
      "attrs": Object {
        "key": "t-5",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Well guess what, you absolute kiwi:",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h3",
    },
    Object {
      "attrs": Object {
        "key": "t-6",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "You. Are. Over-designing. Look at this fruit. It's a banana-loving website. Why the fig do you need to animate a fruity trendy-pear banner flag when I hover over that useless piece of mango? You spent hours on it and added 80 kilobytes to your juicy site, and some papaya jabbing at it on their iPad with fat sausage fingers will never see that fruit. Not to mention blind people will never see that fruit, but they don't see any of your juicy fruit.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-7",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "You never knew it, but this is your perfect website. Here's why.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-8",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "It's fruity lightweight",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-9",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "This entire page weighs less than the gradient-meshed facebook logo on your juicy Wordpress site. Did you seriously load 100kb of jQuery UI just so you could animate the fruity background color of a div? You loaded all 7 fontfaces of a citrusy webfont just so you could say \\"Hi.\\" at 100px height at the beginning of your site? ",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-10",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "You piece of fruit.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-11",
      },
      "children": Array [
        Array [
          Object {
            "attrs": Object {
              "key": "t-0",
            },
            "children": Array [
              Array [
                Object {
                  "attrs": Object {
                    "key": "t-0",
                  },
                  "children": Array [
                    Array [
                      Object {
                        "attrs": Object {
                          "href": "/blog/11924676",
                          "key": "t-0",
                        },
                        "children": Array [
                          Array [
                            Object {
                              "key": "p-0",
                              "text": "New feature: Media Area granular permissions",
                            },
                          ],
                        ],
                        "tagName": "a",
                      },
                      Object {
                        "attrs": Object {
                          "href": "/blog/11924676",
                          "key": "t-1",
                        },
                        "children": Array [
                          Array [
                            Object {
                              "children": Array [
                                Object {
                                  "key": "t-0-line-first",
                                  "text": "Foobar",
                                },
                              ],
                              "key": "t-0",
                            },
                          ],
                        ],
                        "tagName": "a",
                      },
                    ],
                  ],
                  "tagName": "p",
                },
              ],
            ],
            "tagName": "li",
          },
          Object {
            "attrs": Object {
              "key": "t-1",
            },
            "children": Array [
              Array [
                Object {
                  "attrs": Object {
                    "key": "t-0",
                  },
                  "children": Array [
                    Array [
                      Object {
                        "children": Array [
                          Object {
                            "key": "t-0-line-first",
                            "text": "",
                          },
                        ],
                        "key": "t-0",
                      },
                    ],
                  ],
                  "tagName": "p",
                },
              ],
            ],
            "tagName": "li",
          },
        ],
      ],
      "tagName": "ul",
    },
    Object {
      "attrs": Object {
        "key": "t-12",
        "src": "https://www.datocms-assets.com/205/1606492977-oberlo-cover.jpg",
      },
      "children": Array [],
      "tagName": "img",
    },
    Object {
      "attrs": Object {
        "key": "t-13",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "It's responsive",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-14",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "You kumquat. You thought you needed media queries to be responsive, but no. Responsive means that it responds to whatever fruity screensize it's viewed on. This site doesn't care if you're on an iMac or a banana-loving Tamagotchi.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-15",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "It fruity works",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-16",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Look at this fruit. You can read it ... that is, if you can read, melonhead. It makes sense. It has banana-loving hierarchy. It's using HTML5 tags so you and your pear-headed browser know what the fig's in this juicy site. That's semantics, you absolute kiwi.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-17",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "It has content on the fruity screen. Your site has three bylines and link to your dribbble account, but you spread it over 7 full screens and make me click some bobbing button to show me how cool the jQuery ScrollTo plugin is.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-18",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Cross-browser compatibility? Load this kumquat in IE6. I fruity dare you.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-19",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "This is a website. ",
              },
            ],
            "key": "t-0",
          },
          Object {
            "attrs": Object {
              "key": "t-1",
            },
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "key": "t-1-line-first",
                    "text": "Look at it.",
                  },
                ],
                "key": "t-1",
              },
            ],
            "tagName": "mark",
          },
          Object {
            "children": Array [
              Object {
                "key": "t-2-line-first",
                "text": " You've never seen one before.",
              },
            ],
            "key": "t-2",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-20",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Like the man who's never grown out his beard has no idea what his true natural state is, you have no fruity idea what a website is. All you have ever seen are citrusy skeuomorphic bastardizations of what should be text communicating a juicy message. This is a real, naked website. Look at it. It's fruity beautiful.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-21",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Yes, this is fruity satire, you fig",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h3",
    },
    Object {
      "attrs": Object {
        "key": "t-22",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "I'm not actually saying your citrusy site should look like this. What I'm saying is that all the problems we have with websites are ones we create ourselves. Websites aren't broken by default, they are functional, high-performing, and accessible. You break them. You son-of-a-peach.",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "p",
    },
    Object {
      "attrs": Object {
        "key": "t-23",
      },
      "children": Array [
        Array [
          Object {
            "attrs": Object {
              "key": "t-0",
            },
            "children": Array [
              Array [
                Object {
                  "children": Array [
                    Object {
                      "key": "t-0-line-first",
                      "text": "\\"Good design is as little design as possible.\\" ",
                    },
                  ],
                  "key": "t-0",
                },
              ],
            ],
            "tagName": "p",
          },
          Object {
            "attrs": Object {
              "key": "footer",
            },
            "children": Array [
              "some German fruithead",
            ],
            "tagName": "footer",
          },
        ],
      ],
      "tagName": "blockquote",
    },
    Object {
      "attrs": Object {
        "key": "t-24",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "Epilogue",
              },
            ],
            "key": "t-0",
          },
        ],
      ],
      "tagName": "h2",
    },
    Object {
      "attrs": Object {
        "key": "t-25",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "From the philosophies expressed (poorly) above, ",
              },
            ],
            "key": "t-0",
          },
          Object {
            "attrs": Object {
              "href": "http://txti.es",
              "key": "t-1",
              "rel": "nofollow",
              "target": "_blank",
            },
            "children": Array [
              Array [
                Object {
                  "children": Array [
                    Object {
                      "key": "t-0-line-first",
                      "text": "txti",
                    },
                  ],
                  "key": "t-0",
                },
              ],
            ],
            "tagName": "a",
          },
          Object {
            "children": Array [
              Object {
                "key": "t-2-line-first",
                "text": " was created. You should try it today to make your own banana-loving websites.",
              },
            ],
            "key": "t-2",
          },
        ],
      ],
      "tagName": "p",
    },
  ],
  "key": "t-0",
}
`;

exports[`render unique keys 1`] = `
Object {
  "children": Array [
    Object {
      "attrs": Object {
        "key": "t-0",
      },
      "children": Array [
        Array [
          Object {
            "children": Array [
              Object {
                "key": "t-0-line-first",
                "text": "text two\\\\n",
              },
            ],
            "key": "t-0",
          },
          Object {
            "children": Array [
              Object {
                "key": "t-1-line-first",
                "text": "text two\\\\n",
              },
            ],
            "key": "t-1",
          },
        ],
      ],
      "tagName": "p",
    },
  ],
  "key": "t-0",
}
`;
